#1492 Fix data list result paging