@@ -17,15 +17,6 @@
 package stroom.activity.impl.db;
 
 
-import org.jooq.exception.DataChangedException;
-import org.junit.jupiter.api.BeforeEach;
-import org.junit.jupiter.api.Test;
-import org.junit.jupiter.api.extension.ExtendWith;
-import org.mockito.Mock;
-import org.mockito.Mockito;
-import org.mockito.junit.jupiter.MockitoExtension;
-import org.mockito.junit.jupiter.MockitoSettings;
-import org.mockito.quality.Strictness;
 import stroom.activity.api.ActivityService;
 import stroom.activity.api.FindActivityCriteria;
 import stroom.activity.impl.ActivityDao;
@@ -35,8 +26,17 @@ import stroom.activity.shared.Activity.Prop;
 import stroom.activity.shared.ActivityValidationResult;
 import stroom.security.api.SecurityContext;
 import stroom.test.common.util.db.DbTestUtil;
+import stroom.util.shared.ResultPage;
 
-import java.util.List;
+import org.jooq.exception.DataChangedException;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.extension.ExtendWith;
+import org.mockito.Mock;
+import org.mockito.Mockito;
+import org.mockito.junit.jupiter.MockitoExtension;
+import org.mockito.junit.jupiter.MockitoSettings;
+import org.mockito.quality.Strictness;
 
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.api.Assertions.assertThatThrownBy;
@@ -64,7 +64,7 @@ class TestActivityServiceImpl {
     @Test
     void test() {
         // Delete all existing.
-        List<Activity> list = activityService.find(new FindActivityCriteria());
+        ResultPage<Activity> list = activityService.find(new FindActivityCriteria());
         list.forEach(activity -> activityService.delete(activity.getId()));
 
         // Create 1
@@ -95,26 +95,26 @@ class TestActivityServiceImpl {
         activity2 = activityService.update(activity2);
 
         // Find both
-        final List<Activity> list1 = activityService.find(new FindActivityCriteria());
+        final ResultPage<Activity> list1 = activityService.find(new FindActivityCriteria());
         assertThat(list1.size()).isEqualTo(2);
 
         // Find each
-        final List<Activity> list2 = activityService.find(FindActivityCriteria.create("bar"));
+        final ResultPage<Activity> list2 = activityService.find(FindActivityCriteria.create("bar"));
         assertThat(list2.size()).isEqualTo(1);
-        assertThat(list2.get(0).getId()).isEqualTo(activity1.getId());
+        assertThat(list2.getFirst().getId()).isEqualTo(activity1.getId());
 
-        final List<Activity> list3 = activityService.find(FindActivityCriteria.create("ipsum"));
+        final ResultPage<Activity> list3 = activityService.find(FindActivityCriteria.create("ipsum"));
         assertThat(list3.size()).isEqualTo(1);
-        assertThat(list3.get(0).getId()).isEqualTo(activity2.getId());
+        assertThat(list3.getFirst().getId()).isEqualTo(activity2.getId());
 
         // Delete one
         activityService.delete(activity1.getId());
-        final List<Activity> list4 = activityService.find(new FindActivityCriteria());
+        final ResultPage<Activity> list4 = activityService.find(new FindActivityCriteria());
         assertThat(list4.size()).isEqualTo(1);
 
         // Delete the other
         activityService.delete(activity2.getId());
-        final List<Activity> list5 = activityService.find(new FindActivityCriteria());
+        final ResultPage<Activity> list5 = activityService.find(new FindActivityCriteria());
         assertThat(list5.size()).isEqualTo(0);
     }
 
